tests/snapshots/snapshot_tests__array_init_var.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array_init_var.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a i i) i) i)",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z Z) Z) Z)",
        "(= (Read-Int-Int (Write-Int-Int a i i) i) (Read-Int-Int a i))",
        "(= (Read-Int-Int (Write-Int-Int a i i) Z) (Read-Int-Int a Z))",
    ],
}
