tests/snapshots/snapshot_tests__array_init_var_plus_ind.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_var_plus_ind.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i_next i) i_next) i)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i_next i) i_next) (Read-Int-Int Array-Int-Int!val!1 i_next))",
    ],
}
