tests/snapshots/snapshot_tests__array_init_var_plus_ind2.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_var_plus_ind2.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i k) i) k)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!1 i k) i) (Read-Int-Int Array-Int-Int!val!1 i))",
    ],
}
