tests/snapshots/snapshot_tests__array_init_var_plus_ind3.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array_init_var_plus_ind3.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read-Int-Int (Write-Int-Int a Z j) Z) j)",
        "(= (Read-Int-Int (Write-Int-Int a Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!2 Z i) Z) i)",
        "(= (Read-Int-Int (Write-Int-Int a Z j) Z) (Read-Int-Int a Z))",
        "(= (Read-Int-Int (Write-Int-Int Array-Int-Int!val!2 Z i) Z) (Read-Int-Int Array-Int-Int!val!2 Z))",
        "(= (Read-Int-Int (Write-Int-Int a Z i) Z) (Read-Int-Int a Z))",
    ],
}
